# ItWasAllADream

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint_python.yml
itwasalladream/: __main__.py  par_vector.py  rprn_vector.py  structs.py
tests/: conftest.py
